// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders correctly 1`] = `
<span
  className="css-18gl5xn-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with danger type 1`] = `
<span
  className="css-1wkohyq-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="danger"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with default type 1`] = `
<span
  className="css-18gl5xn-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with important type 1`] = `
<span
  className="css-lvccd0-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="important"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with info type 1`] = `
<span
  className="css-cllqz1-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="info"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with success type 1`] = `
<span
  className="css-1bktjun-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="success"
>
  Hello World
</span>
`;

exports[`<Badge /> renders correctly with warning type 1`] = `
<span
  className="css-md9pq-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="warning"
>
  Hello World
</span>
`;

exports[`<Badge /> renders pill variant 1`] = `
<span
  className="css-rhsqq0-PillBadge-setBadgeSizing-setPillBadgeSizing e1a2mgzx0"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders small variant 1`] = `
<span
  className="css-1jnry2m-Badge-setBadgeSizing e1a2mgzx1"
  size="small"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders with custom background and text color 1`] = `
<span
  className="css-1y228gx-Badge-setBadgeSizing e1a2mgzx1"
  color="#222"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders with custom background only 1`] = `
<span
  className="css-1xes95r-Badge-setBadgeSizing e1a2mgzx1"
  size="medium"
  type="default"
>
  Hello World
</span>
`;

exports[`<Badge /> renders with custom text color only 1`] = `
<span
  className="css-1jxr4tc-Badge-setBadgeSizing e1a2mgzx1"
  color="#222"
  size="medium"
  type="default"
>
  Hello World
</span>
`;
